# capitolscope

./: .gitignore  CONGRESSIONAL_DATA_QUALITY_IMPROVEMENTS.md  CONGRESSIONAL_IMPORT_GUIDE.md  DATABASE_SETUP.md  DATA_MIGRATION_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.combined  Dockerfile.worker  FRONTEND_DEPLOYMENT_GUIDE.md  LINEAR_TICKETS.md  RATE_LIMITING_GUIDE.md  README.md  STRIPE_LOCAL_DEV_SETUP.md  YAHOO_FINANCE_RATE_LIMITING_SOLUTION.md  alembic.ini  check_enum.py  cloud_run.sh  commands.md  configure_bucket_permissions.sh  congressTrades copy.py  congressTrades.ipynb  congressTrades.py  data_migration_strategy.md  deploy_frontend.sh  deploy_frontend_cloud_storage.sh  deployment_strategy.md  docker-aliases.sh  docker-compose-homelab.yml  docker-compose.cloud-worker.yml  docker-compose.yml  docker-entrypoint.sh  example_logging_usage.py  nginx-combined.conf  pyproject.toml  requirements.txt  requirements_congressional.txt  requirements_congressional_fixed.txt  (+13 more)
alembic/: env.py
alembic/versions/: 06f5070a9246_update_subscription_tier_values_to_.py  104b8ee08893_add_congress_gov_api_data_fields_to_.py  20250109_063000_add_user_role_column.py  816125db32dc_add_missing_enum_types.py  816125db32dc_add_missing_enum_types.py.backup  842029b32a9b_add_specific_notification_fields_to_.py  8443018f38cb_update_subscription_tier_enum.py  b329f6fb84f6_initial_migration_with_uuid_primary_keys.py  beaeff2be89f_changed_securities_fields_to_reference_.py  c51ba2f145fb_add_prefix_field_to_congress_members.py  d61b8ca6ee5f_update_enums_to_uppercase.py  d66bb0f18e50_initial_migration_create_all_tables.py  ead6b9a17f33_make_chamber_and_state_nullable_in_.py  f095fc199c74_add_trade_alert_notification_tables_.py
app/: Dockerfile  pyproject.toml
app/data/congress/csv/: 2014FD.csv  2014FD_docIDlist.csv  2015FD_docIDlist.csv  2015FD_old.csv  2016FD_docIDlist.csv  2017FD.csv  2017FD.xlsx  2017FD_old.csv  2018FD.csv  2018FD.xlsx  2019FD.csv  2019FD.xlsx  2019FD_docIDlist.csv  2020FD_docIDlist.csv  2021FD.csv  2021FD.xlsx  2021FD_docIDlist.csv  2021FD_old.csv  2022FD.csv  2022FD.xlsx  2022FD_docIDlist.csv  2023FD.csv  2023FD_docIDlist.csv  2024FD.xlsx  2024FD_old.csv  2025FD.csv  2025FD.xlsx  2025FD_docIDlist.csv
app/data/congress/xslx/: 2014FD.xlsx  2015FD.xlsx  2016FD.xlsx  2020FD.xlsx  2024FD.xlsx
app/docs/: logging.md
app/logs/: auto_created_members.csv  failed_imports.csv
app/scripts/: test_database_connection.py
app/src/: main.py
app/src/api/: auth.py  dev_endpoints.py  health.py  market_data.py  members.py  middleware.py  notifications.py  portfolios.py  roles.md  stripe.py  trades.py
app/src/background/: __init__.py  celery_app.py  cloud_run_worker.py  logging_config.py  price_ingestion_task.py  production_celery.py  tasks.py
app/src/core/: auth.py  config.py  database.py  email.py  exceptions.py  logging.py  responses.py
app/src/core/services/: stripe_service.py
app/src/database/: connection.py  models.py
app/src/domains/: __init__.py
app/src/domains/analytics/: __init__.py
app/src/domains/base/: __init__.py  crud.py  interfaces.py  models.py  schemas.py  services.py
app/src/domains/congressional/: __init__.py  client.py  crud.py  data_quality.py  ingestion.py  interfaces.py  models.py  pdf_parser.py  schemas.py  services.py  ticker_extraction.py
app/src/domains/market_data/: __init__.py  models.py  schemas.py
app/src/domains/notifications/: __init__.py  alert_engine.py  crud.py  interfaces.py  models.py  notification_service.py  schemas.py  services.py  templates.py  trade_detection.py
app/src/domains/portfolio/: __init__.py  crud.py  interfaces.py  models.py  schemas.py  services.py
app/src/domains/securities/: __init__.py  crud.py  data_fetcher.py  ingestion.py  interfaces.py  models.py  price_fetcher.py  schemas.py  services.py
app/src/domains/trading/: __init__.py
app/src/domains/users/: __init__.py  crud.py  interfaces.py  models.py  schemas.py  services.py
app/src/logs/: failed_imports.csv
app/src/schemas/: __init__.py  admin.py  base.py  congressional.py  health.py  securities.py  social.py  users.py
app/src/scripts/: fetch_stock_data.py  fix_congressional_import.py  import_congressional_data.py  logging_config.py  run_improved_import.py  seed_securities_alpha_vantage.py  seed_securities_crumb.py  seed_securities_database.py  seed_securities_database_conservative.py  setup_securities_database.py  sync_congress_members.py  test_congress_api.py  test_data_quality.py  test_data_quality_improvements.py  test_rate_limiting.py
data/: README.md
deploy/: SCHEDULER_DEPLOYMENT_GUIDE.md
docs/: 0.file_structure.md  1.requirements.md  2.method.md  3.implementation.md  4.milestones.md  5.gathering_results.md  CAP_24_25_IMPLEMENTATION_PLAN.md  CAP_24_25_SUMMARY.md  CLOUD_RUN_DEPLOYMENT_SUMMARY.md  CLOUD_RUN_SCHEDULER_GUIDE.md  DATABASE_SETUP.md  DATA_QUALITY_AUDIT.md  DATA_QUALITY_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  FASTAPI_MIGRATION.md  FRONTEND_TRADE_ALERTS_IMPLEMENTATION.md  INTEGRATED_DEPLOYMENT_STRATEGY.md  LINEAR_TICKETS.md  NOTIFICATION_IMPLEMENTATION_GUIDE.md  PRICING_TIERS.md  SCHEDULER_CRON_IMPLEMENTATION.md  SCHEDULER_IMPLEMENTATION_SUMMARY.md  congress_api_finalization_plan.md  congress_api_integration.md  congress_gov_api.md
frontend/: COLOR_PALETTE_FRAMEWORK.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.prod  Dockerfile.simple  README.md  deploy.sh  index.html  nginx.cloudrun.conf  nginx.conf  nginx.simple.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  (+2 more)
notebooks/: data_exploration.ipynb  model_prototyping.ipynb  test.ipynb
processing/: preprocess_congress.py
schema/: database_schema.sql
scripts/: backup_data.sh  celery_health_check.sh  celery_management.sh  data_audit.sql  disk_space_check.sh  health_check.sh  import_congressional_data.py  init_database.py  migrate_from_sqlite.py  setup_database.py  setup_stripe_products.py  test-worker-only.sh  test_congressional_import.py  test_connection.py
utils/: config.py
(+164 files in other folders)
