[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capitolscope"
version = "0.1.0"
description = "Congressional trading transparency platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "CapitolScope Team"},
]
keywords = ["congress", "trading", "transparency", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.30.0",
    "alembic>=1.15.2",
    
    # Supabase & Auth
    "supabase>=2.13.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    
    # Data Sources
    "yfinance>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "alpha-vantage>=2.3.0",
    
    # PDF Processing
    "pdfplumber>=0.10.0",
    "pypdf2>=3.0.0",
    
    # Background Tasks
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    
    # Monitoring & Logging
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.40.0",
    
    # Development
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto" 